--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+
+/* General styles */
+@import './css/normalize.css';
+@import './css/typography.css';
+
+@import './css/vars.css';
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +14,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--colorBGMain);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
+
+
