--- a/src/app/components/button/button.module.css
+++ b/src/app/components/button/button.module.css
@@ -2,7 +2,7 @@ button {
     list-style-type: none;
     color: var(--colorLight);
     text-decoration: none;
-    padding: var(--spacerSmall) var(--spacerRegular);
+    padding: 0.8rem 4rem;
     border-radius: 1.4rem;
     text-transform: uppercase;
     transition: ease-in-out .2s;
