--- a/src/app/content/landing/containers/login/login.module.css
+++ b/src/app/content/landing/containers/login/login.module.css
@@ -1,11 +1,11 @@
 .login__container{
-    width:95%;
+    width:100%;
     height:90%;
     display:flex;
     justify-content:center;
 }
 .login{
-    width:75%;
+    width:80%;
     display:flex;
     flex-direction:column;
     justify-content:center;
@@ -13,11 +13,27 @@
 }
 .title{
     margin-bottom:3rem;
+    width:20rem;
+    text-align:center;
     color: var(--colorH3Dark)
+}
+.form{
+display:flex;
+flex-direction: column;
 }
 .textContainer{
     margin-top:1rem;
 }
 .centerPara{
     text-align:center;
+}
+
+@media only screen and (min-width:1400px) {
+    .login{
+        width:70%;
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+        align-items:center;
+    }
 }
