--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -4,6 +4,7 @@
   --navText: #555;
   --subTitle: #0a2f2f;
   --colorH3Light: #8acaa3;
+  --secondaryColor: #46a381;
   --colorH3Dark: #0a824b;
   --colorBGMain: #fcf6e9;
   --hoverButton: #d54283;
