--- a/src/app/content/apply/containers/header/header.module.css
+++ b/src/app/content/apply/containers/header/header.module.css
@@ -1,3 +1,8 @@
 .title{
-color: var(--colorH3Dark)
+color: var(--colorH3Dark);
+text-align:center;
+margin-top:2rem;
+}
+.text{
+text-align:center;
 }
