--- a/src/app/content/apply/containers/personal/personal.module.css
+++ b/src/app/content/apply/containers/personal/personal.module.css
@@ -3,8 +3,11 @@
     margin-left: -2rem;
 }
 
-
-@media only screen and (min-width: 1100px) {
+.personal{
+    margin-top:2rem;
+    margin-bottom:2rem;
+}
+@media only screen and (min-width: 720px) {
     .formField__identification {
         margin-right: var(--spacerBig) ;
     }
