--- a/src/app/content/apply/containers/progressBar/progressBar.module.css
+++ b/src/app/content/apply/containers/progressBar/progressBar.module.css
@@ -38,11 +38,14 @@
         display: flex;
         justify-content: space-between;
         width: 5rem;
+        height:5rem;
     }
 
     .progressWrapper{
         flex-direction:column;  
         width: 1rem; 
+        height:100%;
+        justify-content:center;
         
     }
     .line{
