--- a/src/app/content/apply/containers/progressBar/progressBar.module.css
+++ b/src/app/content/apply/containers/progressBar/progressBar.module.css
@@ -36,7 +36,7 @@
     
     .stepWrapper{
         display: flex;
-        justify-content: space-between;
+        justify-content: centers;
         width: 5rem;
         height:5rem;
     }
