styling bug fixes

--- a/src/app/components/button/button.module.css
+++ b/src/app/components/button/button.module.css
@@ -9,6 +9,10 @@
     text-transform: uppercase;
     transition: ease-in-out .2s;
   }
+
+  .spacer {
+    margin-top: var(--spacerBig);
+  }
   
 
   .disabled{
