--- a/src/app/content/apply/containers/adres/adres.module.css
+++ b/src/app/content/apply/containers/adres/adres.module.css
@@ -1,6 +1,7 @@
 @media only screen and (min-width:1400px) {
     .adressWrapper {
         display: flex;
+        justify-content: space-between;
     }
 
     .spacer {
