--- a/src/app/content/apply/index.module.css
+++ b/src/app/content/apply/index.module.css
@@ -19,9 +19,14 @@
 }
 
 .buttonsWrapper {
-    margin-top: 3rem;
-
+    display:flex;
+    flex-direction:column;
+    align-items: space-around;
+    justify-content: space-around;
+   height: 10rem;
 }
+
+
 
 .underground{
     display:flex;
@@ -36,6 +41,21 @@
     .container__wrapper{
         height:110vh;
     
+    }
+    .buttonsWrapper {
+        margin-top: 3rem;
+        width:20rem;
+        display:flex;
+        flex-direction: row;
+        justify-content: space-around;
+    
+    }
+    .button{
+        margin-top: 2rem;
+    }
+
+    .leftButton{
+        margin-left:2rem;
     }
     
     }
