--- a/src/app/content/apply/index.module.css
+++ b/src/app/content/apply/index.module.css
@@ -48,6 +48,8 @@
         display:flex;
         flex-direction: row;
         justify-content: space-around;
+        position: absolute;
+        bottom: 0;
     
     }
     .button{
