--- a/src/app/content/apply/index.module.css
+++ b/src/app/content/apply/index.module.css
@@ -4,7 +4,8 @@
     justify-content:center;
     align-items:center;
     width:100vw;
-    height:90vh;
+    height:100vh;
+    overflow:scroll;
 
 }
 .wrapper{
@@ -17,7 +18,9 @@
     justify-content:center;
     align-items:center;
 }
-
+::-webkit-scrollbar {
+    display: none;
+}
 .buttonsWrapper {
     display:flex;
     flex-direction:column;
