--- a/src/app/content/sidebar/index.module.css
+++ b/src/app/content/sidebar/index.module.css
@@ -10,13 +10,21 @@
     display:flex;
     justify-content:center;
     align-items:center;
-    padding: 2rem 1rem;
+    padding: 1rem 1rem;
     height: 100vh;
-    width: 10vw;
+    width: 8vw;
 }
 .navWrapper{
     display:flex;
-    height:40vh;
+    height:45vh;
     justify-content:space-between;
     flex-direction:column;
+}
+.link{
+    text-decoration:none;
+    text-transform: none;
+    color:white;
+}
+.text{
+    color:white;
 }
