--- a/src/app/content/sidebar/index.module.css
+++ b/src/app/content/sidebar/index.module.css
@@ -12,19 +12,11 @@
     align-items:center;
     padding: 1rem 1rem;
     height: 100vh;
-    width: 8vw;
+    width: 6rem;
 }
 .navWrapper{
     display:flex;
     height:45vh;
     justify-content:space-between;
     flex-direction:column;
-}
-.link{
-    text-decoration:none;
-    text-transform: none;
-    color:white;
-}
-.text{
-    color:white;
 }
