--- a/src/app/content/sidebar/index.module.css
+++ b/src/app/content/sidebar/index.module.css
@@ -1,22 +1,50 @@
 .wrapper{
     display: flex;
-    flex-direction: column;
+    flex-direction:row;
     height:90vh;
-    justify-content: space-between;
+    width:100vw;
+    justify-content: space-around;
     align-items:center;
 }
 .container{
     background-color: var(--colorBGDark);
     display:flex;
+    flex-direction:row ;
     justify-content:center;
     align-items:center;
-    padding: 1rem 1rem;
-    height: 100vh;
-    width: 6rem;
+    height: 8rem;
+    width: 120vw;
 }
 .navWrapper{
     display:flex;
-    height:45vh;
+    height:10vh;
+    width:20rem;
+    align-items:center;
     justify-content:space-between;
-    flex-direction:column;
+    flex-direction:row;
 }
+
+@media only screen and (min-width:720px) {
+    .wrapper{
+        display: flex;
+        flex-direction: column;
+        height:90vh;
+        justify-content: space-between;
+        align-items:center;
+    }
+    .container{
+        background-color: var(--colorBGDark);
+        display:flex;
+        justify-content:center;
+        align-items:center;
+        padding: 1rem 1rem;
+        height: 100vh;
+        width: 6rem;
+    }
+    .navWrapper{
+        display:flex;
+        height:50vh;
+        justify-content:space-between;
+        flex-direction:column;
+    }
+ }
