--- a/src/app.module.css
+++ b/src/app.module.css
@@ -3,5 +3,14 @@
 }
 .container{
     display:flex;
-    
+    flex-direction:column;
+    justify-content:center;
 }
+
+@media only screen and (min-width:720px) {
+    .container{
+    flex-direction: row;
+    align-items:flex-start;
+    height:100vh;
+    }
+ }
