--- a/src/app/content/sidebar/containers/navItem/navItem.module.css
+++ b/src/app/content/sidebar/containers/navItem/navItem.module.css
@@ -1,14 +1,30 @@
 .wrapper{
     display:flex;
     flex-direction:column;
-    justify-content:center;
+    justify-content:space-around;
     align-items:center;
-    height:10rem;
+    height:6rem;
 }
 .image{
-    width:3rem;
+    width:2rem;
+    margin-bottom:-1rem;
 }
+
 .link{
     text-decoration:none;
     color:#EFE9DC
 }
+.text{
+    font-size:1rem;
+}
+
+
+
+
+@media only screen and (min-width:720px) {
+    .image{
+        width:2.5rem;
+        margin-bottom:0rem;
+    }
+    
+ }
