--- a/src/app/content/sidebar/index.module.css
+++ b/src/app/content/sidebar/index.module.css
@@ -1,27 +1,21 @@
 .wrapper{
-    display: flex;
-    flex-direction:row;
-    height:90vh;
-    width:100vw;
-    justify-content: space-around;
-    align-items:center;
+ display: flex; 
 }
 .container{
     background-color: var(--colorBGDark);
     display:flex;
-    flex-direction:row ;
     justify-content:center;
-    align-items:center;
-    height: 8rem;
+    height: 5rem;
     width: 100vw;
+    bottom:0;
+    position:fixed;
 }
 .navWrapper{
-    display:flex;
-    height:10vh;
-    width:20rem;
-    align-items:center;
-    justify-content:space-between;
-    flex-direction:row;
+   display:flex;
+   width:70vw;
+   justify-content: space-around;
+   margin-right:1rem;
+
 }
 
 @media only screen and (min-width:720px) {
@@ -39,7 +33,8 @@
         align-items:center;
         padding: 1rem 1rem;
         height: 100vh;
-        width: 6rem;
+        width: 5rem;
+        position:static;
     }
     .navWrapper{
         display:flex;
