--- a/src/app/content/sidebar/containers/navItem/navItem.module.css
+++ b/src/app/content/sidebar/containers/navItem/navItem.module.css
@@ -17,7 +17,12 @@
 .text{
     font-size:1rem;
 }
+.active{
+background-color:#EFE9DC;
+border-radius:2rem;
+padding:0.8rem 0.6rem;
 
+}
 
 
 
@@ -26,5 +31,10 @@
         width:2.5rem;
         margin-bottom:0rem;
     }
-    
+    .active{
+        background-color:#EFE9DC;
+        border-radius:2rem;
+        padding:0.8rem 0.4rem;
+        
+        }
  }
