--- a/src/app/content/sidebar/index.module.css
+++ b/src/app/content/sidebar/index.module.css
@@ -33,7 +33,7 @@ z-index:1;
         justify-content:center;
         align-items:center;
         padding: 1rem 1rem;
-        height: 100vh;
+        height: 115%;
         width: 5rem;
         position:static;
     }
@@ -44,3 +44,18 @@ z-index:1;
         flex-direction:column;
     }
  }
+ @media only screen and (min-width:1025px) {
+
+    .container{
+        background-color: var(--colorBGDark);
+        display:flex;
+        justify-content:center;
+        align-items:center;
+        padding: 1rem 1rem;
+        height: 100vh;
+        width: 5rem;
+        position:static;
+    }
+  
+ }
+
