--- a/src/app/content/sidebar/index.module.css
+++ b/src/app/content/sidebar/index.module.css
@@ -1,29 +1,37 @@
 .wrapper{
  display: flex; 
+ width: 100vw;
+ 
+
 }
 .container{
     background-color: var(--colorBGDark);
     display:flex;
     justify-content:center;
-    height: 5rem;
+    align-items: flex-end;
+    height: 7rem;
     width: 100vw;
     bottom:0;
-z-index:1;
-    position:fixed;
+    z-index:1;
+    position: absolute;;
 }
+
 .navWrapper{
    display:flex;
-   width:70vw;
+   width: 100vw;
    justify-content: space-around;
-   margin-right:1rem;
+   
 
 }
+
 
 @media only screen and (min-width:720px) {
     .wrapper{
         display: flex;
         flex-direction: column;
-        height:90vh;
+        height:100vh;
+        
+        
         justify-content: space-between;
         align-items:center;
     }
@@ -32,14 +40,17 @@ z-index:1;
         display:flex;
         justify-content:center;
         align-items:center;
-        padding: 1rem 1rem;
-        height: 115%;
+        padding: 0rem 1rem;
+        height: 100%;
         width: 5rem;
         position:static;
     }
     .navWrapper{
         display:flex;
-        height:50vh;
+        height: 100vh;
+        width: unset;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
         justify-content:space-between;
         flex-direction:column;
     }
