--- a/src/app/content/tracker/mapbox/donationCounter/DonationCounter.module.css
+++ b/src/app/content/tracker/mapbox/donationCounter/DonationCounter.module.css
@@ -14,7 +14,38 @@
 .treesSaved {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.donation__paragraph {
+    margin: 0;
+}
+
+.raised {
+    color: var(--colorBGMain);
+    font-weight: bold;
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    margin-left: 1.5rem;
+}
+
+.donation {
+    font-weight: bold;
+    font-size: 2rem;
+    color: var(--secondaryColor);
+}
+
+.challengeLink {
+    color: var(--secondaryColor);
+    text-decoration: none;
+    border-bottom: var(--secondaryColor) 1px solid;
+    padding-bottom: .3rem;
+}
+
+.trees {
+    color: var(--colorBGMain);
 }
 
 @media only screen and (min-width:720px) {
