--- a/src/app/content/tracker/mapbox/donationCounter/DonationCounter.module.css
+++ b/src/app/content/tracker/mapbox/donationCounter/DonationCounter.module.css
@@ -26,14 +26,14 @@
 .raised {
     color: var(--colorBGMain);
     font-weight: bold;
-    font-size: 2.5rem;
+    font-size: 1.6rem;
     text-transform: uppercase;
     margin-left: 1.5rem;
 }
 
 .donation {
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 1.4rem;
     color: var(--secondaryColor);
 }
 
@@ -52,10 +52,23 @@
     .donationCounter__container {
         width: 50vw;
     }
+
+    .donationCounter__container {
+        transform: translate(-55%, -50%);
+    }
+
+    .raised {
+        font-size: 2.5rem;
+    }
+
+    .donation {
+        font-size: 2rem;
+    }
 }
 
 @media only screen and (min-width:1400px) {
     .donationCounter__container {
         width: 30vw;
+        transform: translate(-70%, -50%);
     }
 }
