--- a/src/app/content/tracker/mapbox/mapbox.module.css
+++ b/src/app/content/tracker/mapbox/mapbox.module.css
@@ -6,17 +6,27 @@
     height: 0rem;
 }
 
-.progressbar {
+.progressbarLocation {
     position: absolute;
     width: 100%;
-    bottom: 3rem;
+    height: 1rem;
+    bottom: 10rem;
     z-index: 2;
-    
+    display: flex;
+    justify-content: center;
+
 }
 
 @media only screen and (min-width:720px) {
     .donationCounter {
         left: 55%;
     }
+
+    .progressbarLocation {
+        bottom: 4rem;
+    
+    }
+
+
 }
 
