--- a/src/app/content/sidebar/index.module.css
+++ b/src/app/content/sidebar/index.module.css
@@ -37,6 +37,7 @@
     }
     .container{
         background-color: var(--colorBGDark);
+        position: absolute;
         display:flex;
         justify-content:center;
         align-items:center;
@@ -65,7 +66,7 @@
         padding: 1rem 1rem;
         height: 100vh;
         width: 5rem;
-        position:static;
+        position: absolute;
     }
   
  }
