--- a/src/app/content/sidebar/index.module.css
+++ b/src/app/content/sidebar/index.module.css
@@ -139,7 +139,7 @@
         padding: 1rem 1rem;
         height: 100vh;
         width: 5rem;
-        position: absolute;
+        position: static;
     }
   
  }
