--- a/src/app/content/tracker/mapbox/mapbox.module.css
+++ b/src/app/content/tracker/mapbox/mapbox.module.css
@@ -8,13 +8,9 @@
 
 .progressbarLocation {
     position: absolute;
-    width: 100%;
-    height: 1rem;
-    bottom: 10rem;
     z-index: 2;
-    display: flex;
-    justify-content: center;
-
+    left: 4%;
+    bottom: 10rem;
 }
 
 @media only screen and (min-width:720px) {
@@ -23,8 +19,8 @@
     }
 
     .progressbarLocation {
-        bottom: 4rem;
-    
+        left: 24%;
+        bottom: 3rem;
     }
 
 
