--- a/src/app/content/tracker/mapbox/donationCounter/DonationCounter.module.css
+++ b/src/app/content/tracker/mapbox/donationCounter/DonationCounter.module.css
@@ -1,5 +1,5 @@
 .donationCounter__container {
-    height: 20rem;
+    height: 15rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -17,6 +17,7 @@
     justify-content: space-between;
     padding-left: 10%;
     padding-right: 10%;
+    margin-bottom: 0;
 }
 
 .donation__paragraph {
@@ -26,14 +27,14 @@
 .raised {
     color: var(--colorBGMain);
     font-weight: bold;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     text-transform: uppercase;
     margin-left: 1.5rem;
 }
 
 .donation {
     font-weight: bold;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     color: var(--secondaryColor);
 }
 
@@ -42,15 +43,17 @@
     text-decoration: none;
     border-bottom: var(--secondaryColor) 1px solid;
     padding-bottom: .3rem;
+    margin-bottom: -1rem;
 }
 
 .trees {
     color: var(--colorBGMain);
+    margin-bottom: 0;
 }
 
 @media only screen and (min-width:720px) {
     .donationCounter__container {
-        width: 50vw;
+        width: 40vw;
     }
 
     .donationCounter__container {
@@ -58,17 +61,17 @@
     }
 
     .raised {
-        font-size: 2.5rem;
+        font-size: 1.5rem;
     }
 
     .donation {
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 }
 
 @media only screen and (min-width:1400px) {
     .donationCounter__container {
-        width: 30vw;
-        transform: translate(-70%, -50%);
+        width: 20vw;
+        transform: translate(-60%, -50%);
     }
 }
