--- a/src/app/content/sidebar/index.module.css
+++ b/src/app/content/sidebar/index.module.css
@@ -9,7 +9,7 @@
     display:flex;
     justify-content:center;
     align-items: flex-end;
-    height: 8rem;
+    height: 6rem;
     width: 100vw;
     bottom:0;
     z-index:1;
@@ -29,7 +29,7 @@
     border-radius:10rem;
     width:3rem;
     height:3rem;  
-    top:2rem;
+    top:0.rem;
 }
 
 .activeTR{
