--- a/src/app/components/message/message.module.css
+++ b/src/app/components/message/message.module.css
@@ -5,8 +5,13 @@
 
 .message__container {
     display: flex;
+    margin: 5%;
 }
 
 .message__name {
     font-weight: bold;
+}
+
+.message__contentName {
+    width: 80vw;
 }
