--- a/src/app/components/field/field.module.css
+++ b/src/app/components/field/field.module.css
@@ -8,6 +8,7 @@ border-radius: 2.5rem;
 padding-left: 3.5rem;
 border:none;
 margin-bottom:2rem;
+background-color: white;
 } 
 
 @media only screen and (min-width:1000px) {
