--- a/src/app/content/tracker/mapbox/mapbox.module.css
+++ b/src/app/content/tracker/mapbox/mapbox.module.css
@@ -14,6 +14,13 @@
     bottom: 10rem;
 }
 
+.iconMessage {
+    position: absolute;
+    z-index: 3;
+    right: 2rem;
+    top: 50%;
+}
+
 @media only screen and (min-width:720px) {
     .donationCounter {
         left: 55%;
