--- a/src/app/content/tracker/mapbox/mapbox.module.css
+++ b/src/app/content/tracker/mapbox/mapbox.module.css
@@ -21,6 +21,14 @@
     top: 50%;
 }
 
+.iconInfo {
+    position: absolute;
+    z-index: 3;
+    top: 20%;
+    left: 2rem;
+
+}
+
 @media only screen and (min-width:720px) {
     .donationCounter {
         left: 55%;
@@ -29,6 +37,10 @@
     .progressbarLocation {
         left: 24%;
         bottom: 3rem;
+    }
+
+    .iconInfo {
+        left: 9rem;
     }
 }
 
