--- a/src/app/content/tracker/mapbox/ProgressLocation/ProgressLocation.module.css
+++ b/src/app/content/tracker/mapbox/ProgressLocation/ProgressLocation.module.css
@@ -10,6 +10,20 @@
     height: 0rem;
 }
 
+.textballoon {
+    background-image: url('../../../../../assets//tracker/text_balloon.svg');
+    width: 10rem;
+    background-repeat: no-repeat;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: 100%;
+    position: absolute;
+    bottom:0rem;
+    left: 5rem;
+}
+
 @media only screen and (min-width:720px) {
     .progress {
         width: 60vw;
