--- a/src/app/content/challenge/components/involvementSlider/involvementSlider.module.css
+++ b/src/app/content/challenge/components/involvementSlider/involvementSlider.module.css
@@ -1,8 +1,12 @@
 .slider__container {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .slider {
+    display: flex;
+    align-items: center;
     width: 80%;
 }
