--- a/src/app/content/challenge/containers/assignment/assignment.module.css
+++ b/src/app/content/challenge/containers/assignment/assignment.module.css
@@ -4,4 +4,8 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    border-top: 1px var(--colorBGDark) solid;
+    border-bottom: 1px var(--colorBGDark) solid;
+    margin-right: 5rem;
+    margin-left: 5rem;
 }
