--- a/src/app/content/challenge/index.module.css
+++ b/src/app/content/challenge/index.module.css
@@ -14,11 +14,18 @@
     justify-content: center;
 }
 
-@media only screen and (min-width:1100px) {
+
+
+@media only screen and (min-width:1300px) {
     .challenge__container {
         display: grid;
         grid-template-columns: 30% 70%;
         grid-template-rows: 20% 50% 30% ;
+    }
+
+    .involvement__container {
+        position: absolute;
+        bottom: 3rem;
     }
 
 
