--- a/src/app/content/challenge/index.module.css
+++ b/src/app/content/challenge/index.module.css
@@ -31,6 +31,7 @@
         position: absolute;
         bottom: 3rem;
         left: 10rem;
+        background-color: var(--colorBGMain);
     }
 
 
