--- a/src/app/content/challenge/containers/assignment/assignment.module.css
+++ b/src/app/content/challenge/containers/assignment/assignment.module.css
@@ -9,8 +9,17 @@
     margin-right: 0rem;
     margin-left: 0rem;
     padding-bottom: 2rem;
-    padding-top: 4rem;
-    margin-top:2rem;
-
+    padding-top: 1rem;
+    margin-top:1rem;
 }
+
+
+@media only screen and (min-width:1100px) {
+    .assignment__container {
+      padding-top: 3rem;
+    }
+    
+  
+ }
+
 
