--- a/src/app/content/challenge/index.module.css
+++ b/src/app/content/challenge/index.module.css
@@ -16,6 +16,12 @@
     justify-content: center;
 }
 
+.popUP{
+    position:absolute;
+    right:-1rem;
+    top:40%;
+    z-index:3;
+}
 
 
 @media only screen and (min-width:1300px) {
