--- a/src/app/content/challenge/index.module.css
+++ b/src/app/content/challenge/index.module.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-bottom:8rem;
 }
 
 .popUP{
@@ -28,7 +29,7 @@
     .challenge__container {
         display: grid;
         grid-template-columns: 30% 70%;
-        grid-template-rows: 10rem 30rem 20rem ;
+        grid-template-rows: 10rem 26rem 22rem ;
         margin-right: 5rem;
         margin-left: 5rem;
     }
@@ -39,6 +40,14 @@
         bottom: 10rem;
         left: -5rem;
         background-color: var(--colorBGMain);
+    }
+    .progress {
+        grid-row: 3;
+        grid-column: 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-bottom:2rem;
     }
 
 
