--- a/src/app/content/challenge/containers/assignment/assignment.module.css
+++ b/src/app/content/challenge/containers/assignment/assignment.module.css
@@ -5,14 +5,17 @@
     flex-direction: column;
     align-items: center;
     border-top: 1px var(--colorBGDark) solid;
-    border-bottom: 1px var(--colorBGDark) solid;
+
     margin-right: 0rem;
     margin-left: 0rem;
     padding-bottom: 2rem;
     padding-top: 1rem;
     margin-top:1rem;
+    z-index:2;
 }
 
+.video{
+}
 
 @media only screen and (min-width:1100px) {
     .assignment__container {
