--- a/src/app/content/challenge/containers/involvement/involvement.module.css
+++ b/src/app/content/challenge/containers/involvement/involvement.module.css
@@ -4,13 +4,16 @@
     align-items: center;
     grid-row: 3;
 
+
+
 }
 
 .counter {
     background-color: var(--colorH3Dark);
     height: 5rem;
-    padding-left: 3rem;
-    padding-right: 3rem;
+    letter-spacing: 0.8rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
