--- a/src/app/content/challenge/index.module.css
+++ b/src/app/content/challenge/index.module.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    overflow-x: scroll;
-    margin-right: 1rem;
-    margin-left: 1rem;
+    overflow-y: scroll;
+
+
     
 }
 
@@ -19,7 +19,7 @@
 
 .popUP{
     position:absolute;
-    right:-1rem;
+    right:-0rem;
     top:40%;
     z-index:3;
 }
@@ -38,7 +38,7 @@
         
         position: relative;
         bottom: 10rem;
-        left: -5rem;
+        left: -2vw;
         background-color: var(--colorBGMain);
     }
     .progress {
