--- a/src/app.module.css
+++ b/src/app.module.css
@@ -18,3 +18,9 @@
     height:100vh;
     }
  }
+
+ @media only screen and (min-width:1100px) {
+    .container{
+        grid-template-columns: 3rem 1fr;
+    }
+ }
