--- a/src/app/content/challenge/containers/header/header.module.css
+++ b/src/app/content/challenge/containers/header/header.module.css
@@ -3,7 +3,8 @@
     justify-content:center;
     margin-top:2rem;
     padding-bottom:1rem;
-    grid-column: 1 / span 2;
+    grid-column: 1 /span 2
+
 }
 .image{
     display:none;
@@ -24,9 +25,9 @@
 }
 .question{
     position: absolute;
-    height:3rem;
-    width:10rem;
-    left:85%;
+    height:1rem;
+    width:5rem;
+    right:0;
     top:1rem;
 }
 
