--- a/src/app/content/challenge/components/involvementSlider/involvementSlider.module.css
+++ b/src/app/content/challenge/components/involvementSlider/involvementSlider.module.css
@@ -10,3 +10,12 @@
     align-items: center;
     width: 80%;
 }
+
+p{
+    margin: 0;
+    margin-bottom: 2rem;
+}
+
+.paragraph {
+    font-weight: bold;
+}
