--- a/src/app/content/sidebar/index.module.css
+++ b/src/app/content/sidebar/index.module.css
@@ -113,7 +113,7 @@
         background-color: var(--colorBGDark);
         display:flex;
         justify-content:center;
-        align-items:center;
+        align-items:space-evenly;
         padding: 1rem 1rem;
         height: 100vh;
         width: 5rem;
