--- a/src/app/content/challenge/containers/socialfeed/socialfeed.module.css
+++ b/src/app/content/challenge/containers/socialfeed/socialfeed.module.css
@@ -1,9 +1,56 @@
 .container{
 position:absolute;
-z-index:2;
-height:10rem;
-bottom:0;
-width:20rem;
+z-index:4;
+top:0;
+width:100vw;
+height: 90vh;
 right:0;
-background-color:red;
+background-color:var(--colorBGDark);
+color:white;
 }
+
+.postWrapper{
+ overflow:scroll;
+ height:65vh;
+}
+
+.close{
+position: absolute;
+right:2rem;
+top:2rem;
+}
+
+@media only screen and (min-width:720px) {
+    
+    .container{
+        position:absolute;
+        z-index:4;
+        top:0;
+        width:70vw;
+        height: 100vh;
+        right:0;
+        background-color:var(--colorBGDark);
+        color:white;
+        }
+        .postWrapper{
+            overflow:scroll;
+            height:85vh;
+           }
+           
+ }
+
+@media only screen and (min-width:1100px) {
+    
+    .container{
+        position:absolute;
+        z-index:4;
+        top:0;
+        width:45vw;
+        }
+        .postWrapper{
+            overflow:scroll;
+            height:85vh;
+           }
+           
+ }
+
