--- a/src/app/content/challenge/containers/socialfeed/socialfeed.module.css
+++ b/src/app/content/challenge/containers/socialfeed/socialfeed.module.css
@@ -1,5 +1,6 @@
 .container{
 position:absolute;
+position:fixed;
 z-index:4;
 top:0;
 width:100vw;
@@ -7,6 +8,15 @@ height: 88vh;
 right:0;
 background-color:var(--colorBGDark);
 color:white;
+}
+
+.positionOut{
+right:-40rem;
+display:inline-block;
+}
+
+.positionIn{
+    right:0rem;
 }
 
 .postWrapper{
