--- a/src/app/content/challenge/index.module.css
+++ b/src/app/content/challenge/index.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     height: 100vh;
     overflow-y: scroll;
+    overflow-x:hidden;
 
  
     
@@ -19,8 +20,8 @@
 }
 
 .popUP{
-    position:absolute;
-    right:0rem;
+    right:-2.5rem;
+    position:fixed;
     top:40%;
     z-index:3;
 }
