--- a/src/app/content/sidebar/containers/navItem/navItem.module.css
+++ b/src/app/content/sidebar/containers/navItem/navItem.module.css
@@ -1,7 +1,7 @@
 .wrapper{
     display:flex;
     flex-direction:column;
-    justify-content:space-around;
+    justify-content:space-evenly;
     align-items:center;
     height:8rem;
     
