--- a/src/app/content/sidebar/index.module.css
+++ b/src/app/content/sidebar/index.module.css
@@ -9,9 +9,9 @@
     display:flex;
     justify-content:center;
     align-items: flex-end;
-    height: 8rem;
+    height: 6rem;
     width: 100vw;
-    bottom:-2rem;
+    bottom:0rem;
     padding-top: 1rem;
     z-index:1;
     position: absolute;
@@ -21,6 +21,7 @@
    display:flex;
    width: 100vw;
    justify-content: space-around;
+   align-items: center;
 }
 
 .active{
