carrier layout fixes

--- a/src/app/content/carriers/containers/slider/slider.module.css
+++ b/src/app/content/carriers/containers/slider/slider.module.css
@@ -34,3 +34,20 @@
 .secondNextCarrier {
     width: 5%;
 }
+
+@media only screen and (min-width:720px) {
+    .currentCarrier {
+        width: 6rem;
+  
+    }
+
+    .secondNextCarrier {
+        width: 3rem;
+    }
+
+    .nextCarrier {
+        width: 4rem;
+
+        
+    }
+ }
