--- a/src/app/content/carriers/index.module.css
+++ b/src/app/content/carriers/index.module.css
@@ -11,5 +11,10 @@
     .carrier__container {
         display: flex;
         flex-direction: row-reverse;
+        justify-content: space-between;
+    }
+
+    .sliderPosition {
+        position: unset;
     }
  }
