--- a/src/app/content/carriers/containers/slider/slider.module.css
+++ b/src/app/content/carriers/containers/slider/slider.module.css
@@ -41,6 +41,16 @@
   
     }
 
+    .slider {
+        height: 100vh;
+        width: 15rem;
+        box-shadow: unset;
+        justify-content: center;
+        flex-direction: row;
+        
+    
+    }
+
     .secondNextCarrier {
         width: 3rem;
     }
@@ -49,5 +59,14 @@
         width: 4rem;
 
         
+    }
+
+    .carriers {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .sliderComponent {
+        transform: rotate(90deg);
     }
  }
