--- a/src/app/content/carriers/containers/discover/discover.module.css
+++ b/src/app/content/carriers/containers/discover/discover.module.css
@@ -7,7 +7,8 @@
 .mapboxButton {
     position: absolute;
     z-index: 2;
-    height: 20vh;
+    top: -3%;
+    height: 23vh;
     width: 100%;
     display: flex;
     justify-content: center;
