--- a/src/app/content/settings/containers/account/account.module.css
+++ b/src/app/content/settings/containers/account/account.module.css
@@ -2,14 +2,36 @@
 display:flex;
 flex-direction:column;
 align-items:center;
+border-bottom: solid black 2px;
+padding-bottom:2rem;
 }
 
 .profile{
 border-radius: 20rem;
-width: 40%;
+width: 10rem;
 }
 .settings{
 margin-top:2rem;
-border-bottom: solid black 2px;
 padding-bottom:1rem;
 }
+
+@media only screen and (min-width:720px) {
+
+    .profile{
+        width: 12rem;
+    }
+ }
+ @media only screen and (min-width:1100px) {
+    .container{
+        display:flex;
+        flex-direction:row;
+        justify-content:space-around;
+        align-items:center;
+     }
+
+    .profile{
+        width: 12rem;
+        margin-right:2rem;
+    }
+        
+ }
