--- a/src/app/content/carriers/containers/discover/discover.module.css
+++ b/src/app/content/carriers/containers/discover/discover.module.css
@@ -7,7 +7,7 @@
 .mapboxButton {
     position: absolute;
     z-index: 2;
-    top: -3%;
+    top: -5%;
     height: 23vh;
     width: 100%;
     display: flex;
@@ -28,6 +28,7 @@
    .mapboxButton {
        height: 100vh;
        width: 40vw;
+       top: 0;
    }
 
    .mapbox2 {
