--- a/src/app/content/settings/containers/logout/logout.module.css
+++ b/src/app/content/settings/containers/logout/logout.module.css
@@ -1,4 +1,9 @@
 .logoutPara{
     font-size:1.2rem;
     font-weight:1000;
+}  
+.container{
+    display:flex;
+    flex-direction:column;
+    padding-bottom:2rem;
 }
