--- a/src/app/content/settings/index.module.css
+++ b/src/app/content/settings/index.module.css
@@ -25,7 +25,7 @@
 @media only screen and (min-width:720px) {
 
     .container{
-        height:90vh;
+        height:100vh;
         display:flex;
         flex-direction:column;
         justify-content: center;
@@ -43,5 +43,10 @@
     .title{
         display:block;
      }
+     .container{
+         display:flex;
+     }
  }
+
+ 
  
