--- a/src/app/content/carriers/index.module.css
+++ b/src/app/content/carriers/index.module.css
@@ -8,6 +8,16 @@
     bottom: 5rem;
 }
 
+.containerDetail {
+    height: 100vh;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.mapbox3 {
+    height: 20vh;
+}
+
 @media only screen and (min-width:720px) {
     .carrier__container {
         display: flex;
@@ -19,3 +29,4 @@
         position: unset;
     }
  }
+
