--- a/src/app/content/carriers/components/story/story.module.css
+++ b/src/app/content/carriers/components/story/story.module.css
@@ -1,4 +1,8 @@
 .storyPhoto {
     width: 100%;
-    border-radius: 3rem;
+    border-radius: 1rem;
+}
+
+.journey__container {
+    color: black;
 }
