--- a/src/app/content/carriers/containers/discover/discover.module.css
+++ b/src/app/content/carriers/containers/discover/discover.module.css
@@ -1,13 +1,14 @@
 .mapboxContainer {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
 }
 
 .mapboxButton {
-    position: absolute;
+    grid-column: 1;
+    grid-row: 1;
+    position: unset;
     z-index: 2;
-    top: -5%;
     height: 23vh;
     width: 100%;
     display: flex;
@@ -16,6 +17,8 @@
 }
 
 .mapbox2 {
+    grid-column: 1;
+    grid-row: 1;
  width: 100vw;
  height: 20vh;
 }
@@ -26,13 +29,29 @@
 
 @media only screen and (min-width:720px) {
    .mapboxButton {
-       height: 100%;
-       width: 40vw;
-       top: 0;
+       position: unset;
+       height: 23vh;
+       width: 100%;
+
    }
 
    .mapbox2 {
-    width: 40vw;
-    height: 100%;
+    width: 100%;
+    height: 23vh;
    }
+
 }
+
+@media only screen and (min-width:1300px) {
+    .mapboxButton {
+        height: 100%;
+        width: 40vw;
+        top: 0;
+        position: absolute;
+    }
+ 
+    .mapbox2 {
+     width: 40vw;
+     height: 100%;
+    }
+ }
