--- a/src/app/content/carriers/containers/slider/slider.module.css
+++ b/src/app/content/carriers/containers/slider/slider.module.css
@@ -2,10 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     background-color: var(--colorBGMain);
     box-shadow: 0px -5px 38px 0px rgba(0,0,0,0.33);
-    
 }
 
 .desktop {
@@ -42,6 +41,30 @@
 }
 
 @media only screen and (min-width:720px) {
+
+    .slider {
+        width: 100%;
+
+    
+    }
+
+    .currentCarrier {   
+        width: 6rem;
+  
+    }
+
+    .currentCarrier {
+        width: 6rem;
+  
+    }
+
+    .secondNextCarrier {
+        width: 3rem;
+    }
+
+}
+
+@media only screen and (min-width:1300px) {
     .currentCarrier {
         width: 6rem;
   
