--- a/src/app/content/carriers/index.module.css
+++ b/src/app/content/carriers/index.module.css
@@ -27,9 +27,9 @@
     }
 
     .sliderPosition {
-        position: absolute;
+        position: sticky;
         bottom: -1rem;
-        width: 90%;
+        width: 100%
     }
  }
 
