--- a/src/app/content/carriers/components/story/story.module.css
+++ b/src/app/content/carriers/components/story/story.module.css
@@ -6,3 +6,12 @@
 .journey__container {
     color: black;
 }
+
+@media only screen and (min-width:720px) {
+    .storyPhoto {
+        width: 30rem;
+        border-radius: 2rem;
+        padding: 1rem;
+    }
+
+ }
