--- a/src/app/components/field/field.module.css
+++ b/src/app/components/field/field.module.css
@@ -11,6 +11,10 @@ margin-bottom:2rem;
 background-color: white;
 } 
 
+.errorMessage{
+  color:red;
+  font-size:0.8rem;
+}
 @media only screen and (min-width:1000px) {
   .input {
     width: 18rem;
