--- a/src/app/components/field/field.module.css
+++ b/src/app/components/field/field.module.css
@@ -15,6 +15,11 @@ background-color: white;
   color:red;
   font-size:1rem;
 }
+.correctMessage{
+  color: green;
+  font-size:1rem;
+}
+
 @media only screen and (min-width:1000px) {
   .input {
     width: 18rem;
