--- a/src/app/content/tracker/mapbox/mapbox.module.css
+++ b/src/app/content/tracker/mapbox/mapbox.module.css
@@ -47,7 +47,7 @@
 .currentCarrierName {
     font-weight: bold;
     font-size: 1.2rem;
-    color: var(--colorSecondary);
+    color: var(--hoverButton);
 }
 
 .currentCarrierKmToGO {
