--- a/src/app/content/tracker/mapbox/ProgressLocation/ProgressLocation.module.css
+++ b/src/app/content/tracker/mapbox/ProgressLocation/ProgressLocation.module.css
@@ -2,7 +2,10 @@
     width: 90vw;
 }
 
-
+.textballoon {
+    color: white;
+    font-weight: bold;
+}
 
 .textballoon, .indicator {
     display: none;
