--- a/src/app/content/tracker/mapbox/mapbox.module.css
+++ b/src/app/content/tracker/mapbox/mapbox.module.css
@@ -50,6 +50,13 @@
     color: var(--hoverButton);
 }
 
+.positioningPopup {
+    position: absolute;
+    top: 10rem;
+    left: 6%;
+    z-index: 99;
+}
+
 .currentCarrierKmToGO {
     font-size: 1rem;
     font-weight: bold;
