--- a/src/app/content/tracker/mapbox/mapbox.module.css
+++ b/src/app/content/tracker/mapbox/mapbox.module.css
@@ -51,10 +51,18 @@
 }
 
 .positioningPopup {
-    position: absolute;
-    top: 10rem;
-    left: 6%;
+    position: fixed;
+    top: 8rem;
+    left: 8%;
     z-index: 99;
+}
+
+.animationDisplayNone {
+    display: none;
+}
+
+.animationDisplayBlock {
+    display: block;
 }
 
 .currentCarrierKmToGO {
@@ -108,8 +116,8 @@
     z-index: 3;
     top: 20%;
     left: 2rem;
-
 }
+
 
 @media only screen and (min-width:720px) {
     .donationCounter {
