--- a/src/app/content/tracker/mapbox/Livechat/Livechat.module.css
+++ b/src/app/content/tracker/mapbox/Livechat/Livechat.module.css
@@ -32,7 +32,9 @@
 
 .messages {
     height: 75vh;
-    overflow: scroll;
+
+    overflow: auto;
+    overscroll-behavior-y:contain;
     
 }
 
@@ -50,8 +52,15 @@
     }
 
     .messages {
+
         height: 85vh;
+        display:flex;
+        flex-direction:column;
+        justify-content:flex-end;
         overflow: scroll;
+
+    
+        
         
     }
 }
