--- a/src/app/content/challenge/components/challengeVideo/challengeVideo.module.css
+++ b/src/app/content/challenge/components/challengeVideo/challengeVideo.module.css
@@ -9,3 +9,11 @@
 display: flex;
 align-items: center;
 }
+
+.VideoDisplayNone {
+    display: none;
+}
+
+.videoDisplayBlock {
+    display: block;
+}
