--- a/src/app/content/challenge/containers/assignment/assignment.module.css
+++ b/src/app/content/challenge/containers/assignment/assignment.module.css
@@ -1,7 +1,7 @@
 .assignment__container {
     grid-column: 1/3;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
     align-items: center;
     border-top: 1px var(--colorBGDark) solid;
@@ -19,10 +19,9 @@
 
 @media only screen and (min-width:1100px) {
     .assignment__container {
-      padding-top: 5rem;
+      padding-top: 0rem;
     }
-    
-  
  }
 
+ 
 
