--- a/src/app/content/challenge/components/challengeText/challengeText.module.css
+++ b/src/app/content/challenge/components/challengeText/challengeText.module.css
@@ -18,6 +18,7 @@
 .challengeTextWrapper {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .challengeTextTitle {
@@ -31,6 +32,11 @@
 
 .challengeTextParagraph {
     line-height: 2.5rem;
+}
+
+.challengeTextFlag {
+    width: 4rem;
+    height: 2rem;
 }
 
 @media only screen and (min-width:1100px) {
