--- a/src/app/content/challenge/containers/involvement/involvement.module.css
+++ b/src/app/content/challenge/containers/involvement/involvement.module.css
@@ -21,8 +21,44 @@
     color: var(--colorBGMain);
     font-weight: bold;
     font-size: 1.8rem;
+    z-index:1;
+}
+
+.added{
+    display: none;
 }
 
 .involvementPhoto {
     margin-bottom: -4rem;
+}
+
+@media only screen and (min-width:1300px) {
+
+    .added{
+        display:block;
+        position: fixed;
+        z-index:0;
+        font-size:2rem;
+        font-weight:800;
+        color:green;
+        }
+        
+        .left{
+            left:25rem;
+        }
+        
+        .right{
+            left:14rem;
+        }
+        
+        .out{
+            transform: translateY(-35rem);
+            transition: ease-in all 2.5s;
+        }
+        
+        .in{
+           bottom:2rem;
+           transform: translateY(7rem);
+        }
+        
 }
