--- a/src/app/content/carriers/containers/discover/discover.module.css
+++ b/src/app/content/carriers/containers/discover/discover.module.css
@@ -4,6 +4,23 @@
     grid-template-rows: 1fr;
 }
 
+.awaitingText {
+    text-transform: uppercase;
+    font-weight: bold;
+    width: 12rem;
+    text-align: center;
+    line-height: 2rem;
+    font-size: 1.5rem;
+    margin-top: 3rem;
+    color: var(--colorSecondary);
+}
+
+.flowerArival__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .mapboxButton {
     grid-column: 1;
     grid-row: 1;
