--- a/src/app/content/challenge/components/post/post.module.css
+++ b/src/app/content/challenge/components/post/post.module.css
@@ -32,7 +32,11 @@ border-radius: 2rem;
 .text{
     max-width:30rem;
 }
-
+.image{
+    width:80vw;
+    border-radius:3rem;
+    margin-top:0.5rem;
+}
 
 @media only screen and (min-width:720px) {
     
