--- a/src/app/content/carriers/containers/slider/slider.module.css
+++ b/src/app/content/carriers/containers/slider/slider.module.css
@@ -33,11 +33,17 @@
     width: 10%;
     margin-left: 2rem;
     margin-right: 2rem;
+    border-radius: 3rem;
     
+}
+
+.displayNoneCarriers {
+    display: none;
 }
 
 .secondNextCarrier {
     width: 5%;
+    border-radius: 3rem;
 }
 
 @media only screen and (min-width:720px) {
